@@ -59,8 +59,8 @@ int main() {
 
     // FIRST MEASUREMENT STAGE
     auto measured1 = measure_seq(psi, first_subsys); // measure first n qubits
-    std::vector<idx> vect_results1 = std::get<0>(measured1); // results
-    double prob1 = std::get<1>(measured1); // probability of the result
+    std::vector<idx> vect_results1 = std::get<RES>(measured1); // results
+    double prob1 = std::get<PROB>(measured1); // probability of the result
     idx n1 = multiidx2n(vect_results1, std::vector<idx>(n, 2)); // binary to int
     double x1 = static_cast<double>(n1) / D; // multiple of 1/r
 
@@ -86,8 +86,8 @@ int main() {
 
     // SECOND MEASUREMENT STAGE
     auto measured2 = measure_seq(psi, first_subsys); // measure first n qubits
-    std::vector<idx> vect_results2 = std::get<0>(measured2); // results
-    double prob2 = std::get<1>(measured2); // probability of the result
+    std::vector<idx> vect_results2 = std::get<RES>(measured2); // results
+    double prob2 = std::get<PROB>(measured2); // probability of the result
     idx n2 = multiidx2n(vect_results2, std::vector<idx>(n, 2)); // binary to int
     double x2 = static_cast<double>(n2) / D; // multiple of 1/r
 
